[package]
name = "aethokit"
version = "0.1.0"
edition = "2021"
description = "A rust SDK that allows you sponsor transactions on the solana network. (mirror of the TS SDK)."
license = "MIT"
repository = "https://github.com/kenolabs/aethokit-rust-sdk"
homepage = "https://github.com/kenolabs/aethokit-rust-sdk"
readme = "README.md"
keywords = ["solana", "gas", "sponsor", "sdk", "aethokit"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
